# casual-convert

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  render.yaml
.github/workflows/: cc-ui-deploy-prod-render.yml  deploy-api.yml  deploy-by-render-service-id.yml  deploy-ui.yml  test_if_it_works.yml
config/test_unit/: app.env
docs/: DEPLOYMENT.md  DEVELOPMENT.md
src/finnikacc/: __init__.py
src/finnikacc/scripts/: api_server_dev.py  version.py  version_help.py
webapps/finnikacc-ui/: .prettierrc.json  Dockerfile  package.json  vite.config.ts
webapps/finnikacc-ui/src/: App.vue  main.ts  vite-env.d.ts
webapps/finnikacc-ui/src/assets/: style.css
webapps/finnikacc-ui/src/components/: CInputDecimal.vue  CcBasket.vue  CcConvRateStatusRows.vue  CcHeaderRow.vue  CcRow.vue  CcRowNew.vue
webapps/finnikacc-ui/src/layouts/: DefaultLayout.vue  DevModeAlert.vue  Disclaimer.vue  Footer.vue
webapps/finnikacc-ui/src/stores/: convert-basket.ts  convert-rates.ts  queries.ts
webapps/finnikacc-ui/src/stores/__tests__/: conv-basket.spec.ts
webapps/finnikacc-ui/src/types-and-utils/: model.ts  useCurrentTime.ts  utils.ts
webapps/finnikacc-ui/src/views/: CurrencyConverterView.vue
